tests/compiler/propertyAccess4/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.9.3/tests/cases/compiler/propertyAccess4.ts`, Apache-2.0 License

null.toBAZ();
//~^ ERROR: The value 'null' cannot be used here.